# aria

./: .env.development  .env.production  .eslintrc.cjs  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_tauri.yml  build_web.yml  deploy.yml  deploy_web.yml  publish.yml  publish_tauri.yml
docs/: creating_plugins.md  creating_themes.md
public/: 404.html
shared/: menus.json
shared/locales/en_gb/: translation.json
shared/locales/en_us/: translation.json
src/: App.module.css  App.test.tsx  App.tsx  main.css  main.tsx  overrides.css  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: commands.rs  main.rs  menu.rs  oauth.rs  player.rs  translation.rs
src/app/: listener.ts  menu.ts  search.ts  store.ts  undo.ts  utils.ts  view.ts
src/components/: AlbumArt.module.css  AlbumArt.tsx  AppMenu.tsx  MenuButton.module.css  MenuButton.tsx  TrackList.tsx
src/components/appmenu/: AppMenu.module.css  AppMenu.tsx  MenuButton.module.css  MenuButton.tsx
src/components/contextmenu/: ColumnVisibilityContextMenu.tsx  ContextMenuContainer.tsx  SidebarItemContextMenu.tsx  SidebarLibraryContextMenu.tsx  SidebarPlaylistsContextMenu.tsx  (+2 more)
src/contexts/: ArtworkContext.tsx  GridContext.tsx  MenuContext.tsx  PlatformContext.tsx  TreeContext.tsx
src/features/: currentSelectors.ts  genericSelectors.ts  sharedSelectors.ts  visibleSelectors.ts
src/hooks/: useKeyboardShortcuts.ts  useMenuActions.ts  useTheme.ts  useTrackGrid.ts
src/plugins/: plugins.ts
src/routes/: Home.tsx
src/styles/: base.css  overrides.css
src/themes/: importThemes.ts  themes.ts
src/views/: AlbumGrid.tsx  Settings.module.css  Settings.tsx  TrackList.tsx
(+140 files in other folders)
