[package]
name = "aria-player"
version = "1.0.1"
description = "Aria"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater",
    "protocol-asset",
    "path-all",
    "dialog-open",
    "dialog-confirm",
    "window-set-fullscreen",
    "system-tray",
    "os-all",
    "window-set-decorations",
    "window-start-dragging",
    "window-close",
    "window-unmaximize",
    "window-unminimize",
    "window-minimize",
    "window-maximize",
    "shell-open",
    "devtools",
    "linux-protocol-headers",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.2"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-oauth = "1.0.0"
url = "2.5.4"
lofty = "0.19.2"
sha2 = "0.10.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

[profile.release.package.wry]
debug = true
debug-assertions = true
